haproxy/mtls/app2/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: hello
          image: "gcr.io/google-samples/hello-app:2.0"
